test_pascal/basic/test_init_set.pas
var
    a: set of integer= [1, 2,3];
    b: set of Char = ['asdasd', 'asdasd','asdasd']; //error
begin
end.
